@@ -1,5 +1,13 @@
 2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* tests/check/Makefile.am:
+	* tests/check/gnet/gnetconn.c: (conn_cb), (test_conn),
+	(gnetconn_suite), (gnetconn):
+	  Add very simple test for gnet_conn_new() and running things
+	  in a user-specified GMainContext.
+
+2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* src/conn-http.c:
 	* src/conn-http.h:
 	  UTF-8-ise.
